--- a/ci/gitlab/builds.yml
+++ b/ci/gitlab/builds.yml
@@ -115,6 +115,24 @@ x86_64-fedora-36-local-env:
     NAME: fedora-36
 
 
+x86_64-fedora-37-prebuilt-env:
+  extends: .native_build_job_prebuilt_env
+  needs:
+    - job: x86_64-fedora-37-container
+      optional: true
+  allow_failure: false
+  variables:
+    NAME: fedora-37
+
+x86_64-fedora-37-local-env:
+  extends: .native_build_job_local_env
+  needs: []
+  allow_failure: false
+  variables:
+    IMAGE: registry.fedoraproject.org/fedora:37
+    NAME: fedora-37
+
+
 x86_64-fedora-rawhide-prebuilt-env:
   extends: .native_build_job_prebuilt_env
   needs:
