spec: use systemd macro to specify path of user unit directory
Signed-off-by: Pavel Hrdina <phrdina@redhat.com>

--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -56,7 +56,7 @@ exit 0
 %license COPYING
 %{_sbindir}/libvirt-dbus
 %{_unitdir}/libvirt-dbus.service
-%{_prefix}/lib/systemd/user/libvirt-dbus.service
+%{_userunitdir}/libvirt-dbus.service
 %{_datadir}/dbus-1/services/org.libvirt.service
 %{_datadir}/dbus-1/system-services/org.libvirt.service
 %{_datadir}/dbus-1/system.d/org.libvirt.conf
