spec: use systemd macros to handle services
Based on fedora packaging guidelines [1] we should use systemd macros
to correctly handle unit files for services.

[1] <https://docs.fedoraproject.org/en-US/packaging-guidelines/Scriptlets/#_systemd>

Signed-off-by: Pavel Hrdina <phrdina@redhat.com>

--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -51,6 +51,18 @@ getent passwd %{system_user} >/dev/null || \
     -c "Libvirt D-Bus bridge" %{system_user}
 exit 0
 
+%post
+%systemd_post %{name}.service
+%systemd_user_post %{name}.service
+
+%preun
+%systemd_preun %{name}.service
+%systemd_user_preun %{name}.service
+
+%postun
+%systemd_postun_with_restart %{name}.service
+%systemd_user_postun_with_restart %{name}.service
+
 %files
 %doc AUTHORS.rst NEWS.rst
 %license COPYING
