--- a/ci/gitlab/builds.yml
+++ b/ci/gitlab/builds.yml
@@ -7,172 +7,108 @@
 
 # Native build jobs
 
-x86_64-almalinux-8-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-almalinux-8:
+  extends: .native_build_job
   needs:
     - job: x86_64-almalinux-8-container
       optional: true
   allow_failure: false
   variables:
     NAME: almalinux-8
-
-x86_64-almalinux-8-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: docker.io/library/almalinux:8
-    NAME: almalinux-8
+    TARGET_BASE_IMAGE: docker.io/library/almalinux:8
 
 
-x86_64-centos-stream-8-git-prebuilt-env:
-  extends: .native_git_build_job_prebuilt_env
+x86_64-centos-stream-8-git:
+  extends: .native_git_build_job
   needs:
     - job: x86_64-centos-stream-8-container
       optional: true
   allow_failure: false
   variables:
     NAME: centos-stream-8
-
-x86_64-centos-stream-8-git-local-env:
-  extends: .native_git_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: quay.io/centos/centos:stream8
-    NAME: centos-stream-8
+    TARGET_BASE_IMAGE: quay.io/centos/centos:stream8
 
 
-x86_64-centos-stream-9-git-prebuilt-env:
-  extends: .native_git_build_job_prebuilt_env
+x86_64-centos-stream-9-git:
+  extends: .native_git_build_job
   needs:
     - job: x86_64-centos-stream-9-container
       optional: true
   allow_failure: false
   variables:
     NAME: centos-stream-9
-
-x86_64-centos-stream-9-git-local-env:
-  extends: .native_git_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: quay.io/centos/centos:stream9
-    NAME: centos-stream-9
+    TARGET_BASE_IMAGE: quay.io/centos/centos:stream9
 
 
-x86_64-debian-11-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-debian-11:
+  extends: .native_build_job
   needs:
     - job: x86_64-debian-11-container
       optional: true
   allow_failure: false
   variables:
     NAME: debian-11
-
-x86_64-debian-11-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: docker.io/library/debian:11-slim
-    NAME: debian-11
+    TARGET_BASE_IMAGE: docker.io/library/debian:11-slim
 
 
-x86_64-debian-sid-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-debian-sid:
+  extends: .native_build_job
   needs:
     - job: x86_64-debian-sid-container
       optional: true
   allow_failure: false
   variables:
     NAME: debian-sid
-
-x86_64-debian-sid-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: docker.io/library/debian:sid-slim
-    NAME: debian-sid
+    TARGET_BASE_IMAGE: docker.io/library/debian:sid-slim
 
 
-x86_64-fedora-36-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-fedora-38:
+  extends: .native_build_job
   needs:
-    - job: x86_64-fedora-36-container
+    - job: x86_64-fedora-38-container
       optional: true
   allow_failure: false
   variables:
-    NAME: fedora-36
-
-x86_64-fedora-36-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: registry.fedoraproject.org/fedora:36
-    NAME: fedora-36
+    NAME: fedora-38
+    TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:38
 
 
-x86_64-fedora-37-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-fedora-39:
+  extends: .native_build_job
   needs:
-    - job: x86_64-fedora-37-container
+    - job: x86_64-fedora-39-container
       optional: true
   allow_failure: false
   variables:
-    NAME: fedora-37
-
-x86_64-fedora-37-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: registry.fedoraproject.org/fedora:37
-    NAME: fedora-37
+    NAME: fedora-39
+    TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:39
 
 
-x86_64-fedora-rawhide-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-fedora-rawhide:
+  extends: .native_build_job
   needs:
     - job: x86_64-fedora-rawhide-container
       optional: true
   allow_failure: false
   variables:
     NAME: fedora-rawhide
-
-x86_64-fedora-rawhide-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: registry.fedoraproject.org/fedora:rawhide
-    NAME: fedora-rawhide
+    TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:rawhide
 
 
-x86_64-opensuse-leap-154-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-opensuse-leap-15:
+  extends: .native_build_job
   needs:
-    - job: x86_64-opensuse-leap-154-container
+    - job: x86_64-opensuse-leap-15-container
       optional: true
   allow_failure: false
   variables:
-    NAME: opensuse-leap-154
+    NAME: opensuse-leap-15
     RPM: skip
-
-x86_64-opensuse-leap-154-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: registry.opensuse.org/opensuse/leap:15.4
-    NAME: opensuse-leap-154
-    RPM: skip
+    TARGET_BASE_IMAGE: registry.opensuse.org/opensuse/leap:15.5
 
 
-x86_64-opensuse-tumbleweed-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-opensuse-tumbleweed:
+  extends: .native_build_job
   needs:
     - job: x86_64-opensuse-tumbleweed-container
       optional: true
@@ -180,48 +116,26 @@ x86_64-opensuse-tumbleweed-prebuilt-env:
   variables:
     NAME: opensuse-tumbleweed
     RPM: skip
-
-x86_64-opensuse-tumbleweed-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: registry.opensuse.org/opensuse/tumbleweed:latest
-    NAME: opensuse-tumbleweed
-    RPM: skip
+    TARGET_BASE_IMAGE: registry.opensuse.org/opensuse/tumbleweed:latest
 
 
-x86_64-ubuntu-2004-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-ubuntu-2004:
+  extends: .native_build_job
   needs:
     - job: x86_64-ubuntu-2004-container
       optional: true
   allow_failure: false
   variables:
     NAME: ubuntu-2004
-
-x86_64-ubuntu-2004-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: docker.io/library/ubuntu:20.04
-    NAME: ubuntu-2004
+    TARGET_BASE_IMAGE: docker.io/library/ubuntu:20.04
 
 
-x86_64-ubuntu-2204-prebuilt-env:
-  extends: .native_build_job_prebuilt_env
+x86_64-ubuntu-2204:
+  extends: .native_build_job
   needs:
     - job: x86_64-ubuntu-2204-container
       optional: true
   allow_failure: false
   variables:
     NAME: ubuntu-2204
-
-x86_64-ubuntu-2204-local-env:
-  extends: .native_build_job_local_env
-  needs: []
-  allow_failure: false
-  variables:
-    IMAGE: docker.io/library/ubuntu:22.04
-    NAME: ubuntu-2204
+    TARGET_BASE_IMAGE: docker.io/library/ubuntu:22.04
