ci: refresh with latest 'lcitool manifest'
 * CentOS, Fedora, Debian, Ubuntu updated to the latest versions
 * Alpine is added as a new target
 * 'libc' is added as a package, since Alpine does not pull it
   in automatically

Signed-off-by: Daniel P. Berrangé <berrange@redhat.com>

--- a/ci/gitlab/containers.yml
+++ b/ci/gitlab/containers.yml
@@ -7,18 +7,18 @@
 
 # Native container jobs
 
-x86_64-almalinux-8-container:
+x86_64-alpine-320-container:
   extends: .container_job
   allow_failure: false
   variables:
-    NAME: almalinux-8
+    NAME: alpine-320
 
 
-x86_64-centos-stream-8-container:
+x86_64-alpine-edge-container:
   extends: .container_job
-  allow_failure: false
+  allow_failure: true
   variables:
-    NAME: centos-stream-8
+    NAME: alpine-edge
 
 
 x86_64-centos-stream-9-container:
@@ -28,25 +28,18 @@ x86_64-centos-stream-9-container:
     NAME: centos-stream-9
 
 
-x86_64-debian-11-container:
+x86_64-debian-12-container:
   extends: .container_job
   allow_failure: false
   variables:
-    NAME: debian-11
+    NAME: debian-12
 
 
 x86_64-debian-sid-container:
   extends: .container_job
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: debian-sid
-
-
-x86_64-fedora-38-container:
-  extends: .container_job
-  allow_failure: false
-  variables:
-    NAME: fedora-38
 
 
 x86_64-fedora-39-container:
@@ -56,9 +49,16 @@ x86_64-fedora-39-container:
     NAME: fedora-39
 
 
-x86_64-fedora-rawhide-container:
+x86_64-fedora-40-container:
   extends: .container_job
   allow_failure: false
+  variables:
+    NAME: fedora-40
+
+
+x86_64-fedora-rawhide-container:
+  extends: .container_job
+  allow_failure: true
   variables:
     NAME: fedora-rawhide
 
@@ -72,16 +72,9 @@ x86_64-opensuse-leap-15-container:
 
 x86_64-opensuse-tumbleweed-container:
   extends: .container_job
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: opensuse-tumbleweed
-
-
-x86_64-ubuntu-2004-container:
-  extends: .container_job
-  allow_failure: false
-  variables:
-    NAME: ubuntu-2004
 
 
 x86_64-ubuntu-2204-container:
@@ -89,3 +82,10 @@ x86_64-ubuntu-2204-container:
   allow_failure: false
   variables:
     NAME: ubuntu-2204
+
+
+x86_64-ubuntu-2404-container:
+  extends: .container_job
+  allow_failure: false
+  variables:
+    NAME: ubuntu-2404
