--- a/ci/gitlab/builds.yml
+++ b/ci/gitlab/builds.yml
@@ -7,26 +7,26 @@
 
 # Native build jobs
 
-x86_64-almalinux-8:
+x86_64-alpine-320:
   extends: .native_build_job
   needs:
-    - job: x86_64-almalinux-8-container
+    - job: x86_64-alpine-320-container
       optional: true
   allow_failure: false
   variables:
-    NAME: almalinux-8
-    TARGET_BASE_IMAGE: docker.io/library/almalinux:8
+    NAME: alpine-320
+    TARGET_BASE_IMAGE: docker.io/library/alpine:3.20
 
 
-x86_64-centos-stream-8-git:
-  extends: .native_git_build_job
+x86_64-alpine-edge:
+  extends: .native_build_job
   needs:
-    - job: x86_64-centos-stream-8-container
+    - job: x86_64-alpine-edge-container
       optional: true
-  allow_failure: false
+  allow_failure: true
   variables:
-    NAME: centos-stream-8
-    TARGET_BASE_IMAGE: quay.io/centos/centos:stream8
+    NAME: alpine-edge
+    TARGET_BASE_IMAGE: docker.io/library/alpine:edge
 
 
 x86_64-centos-stream-9-git:
@@ -40,15 +40,15 @@ x86_64-centos-stream-9-git:
     TARGET_BASE_IMAGE: quay.io/centos/centos:stream9
 
 
-x86_64-debian-11:
+x86_64-debian-12:
   extends: .native_build_job
   needs:
-    - job: x86_64-debian-11-container
+    - job: x86_64-debian-12-container
       optional: true
   allow_failure: false
   variables:
-    NAME: debian-11
-    TARGET_BASE_IMAGE: docker.io/library/debian:11-slim
+    NAME: debian-12
+    TARGET_BASE_IMAGE: docker.io/library/debian:12-slim
 
 
 x86_64-debian-sid:
@@ -56,21 +56,10 @@ x86_64-debian-sid:
   needs:
     - job: x86_64-debian-sid-container
       optional: true
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: debian-sid
     TARGET_BASE_IMAGE: docker.io/library/debian:sid-slim
-
-
-x86_64-fedora-38:
-  extends: .native_build_job
-  needs:
-    - job: x86_64-fedora-38-container
-      optional: true
-  allow_failure: false
-  variables:
-    NAME: fedora-38
-    TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:38
 
 
 x86_64-fedora-39:
@@ -84,12 +73,23 @@ x86_64-fedora-39:
     TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:39
 
 
+x86_64-fedora-40:
+  extends: .native_build_job
+  needs:
+    - job: x86_64-fedora-40-container
+      optional: true
+  allow_failure: false
+  variables:
+    NAME: fedora-40
+    TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:40
+
+
 x86_64-fedora-rawhide:
   extends: .native_build_job
   needs:
     - job: x86_64-fedora-rawhide-container
       optional: true
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: fedora-rawhide
     TARGET_BASE_IMAGE: registry.fedoraproject.org/fedora:rawhide
@@ -112,22 +112,11 @@ x86_64-opensuse-tumbleweed:
   needs:
     - job: x86_64-opensuse-tumbleweed-container
       optional: true
-  allow_failure: false
+  allow_failure: true
   variables:
     NAME: opensuse-tumbleweed
     RPM: skip
     TARGET_BASE_IMAGE: registry.opensuse.org/opensuse/tumbleweed:latest
-
-
-x86_64-ubuntu-2004:
-  extends: .native_build_job
-  needs:
-    - job: x86_64-ubuntu-2004-container
-      optional: true
-  allow_failure: false
-  variables:
-    NAME: ubuntu-2004
-    TARGET_BASE_IMAGE: docker.io/library/ubuntu:20.04
 
 
 x86_64-ubuntu-2204:
@@ -139,3 +128,14 @@ x86_64-ubuntu-2204:
   variables:
     NAME: ubuntu-2204
     TARGET_BASE_IMAGE: docker.io/library/ubuntu:22.04
+
+
+x86_64-ubuntu-2404:
+  extends: .native_build_job
+  needs:
+    - job: x86_64-ubuntu-2404-container
+      optional: true
+  allow_failure: false
+  variables:
+    NAME: ubuntu-2404
+    TARGET_BASE_IMAGE: docker.io/library/ubuntu:24.04
