--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -38,18 +38,12 @@ This package provides D-Bus API for libvirt
 
 %build
 %meson \
-    -Dinit_script=systemd
+    -Dinit_script=systemd \
+    -Dsysusersdir=%{_sysusersdir}
 %meson_build
 
 %install
 %meson_install
-
-%pre
-getent group %{system_user} >/dev/null || groupadd -r %{system_user}
-getent passwd %{system_user} >/dev/null || \
-    useradd -r -g %{system_user} -d / -s /sbin/nologin \
-    -c "Libvirt D-Bus bridge" %{system_user}
-exit 0
 
 %post
 %systemd_post %{name}.service
@@ -74,6 +68,7 @@ exit 0
 %{_datadir}/dbus-1/system.d/org.libvirt.conf
 %{_datadir}/dbus-1/interfaces/org.libvirt.*.xml
 %{_datadir}/polkit-1/rules.d/libvirt-dbus.rules
+%{_sysusersdir}/libvirt-dbus.conf
 %{_mandir}/man8/libvirt-dbus.8*
 
 %changelog
